Adds tags to lighsail tutorial

--- a/content/posts/nodejs-lightsail-setup.mdx
+++ b/content/posts/nodejs-lightsail-setup.mdx
@@ -1,7 +1,7 @@
 ---
 title: Complete NodeJS App Setup  on an AWS Lightsail VPS
 date: 2019-08-06
-tags: []
+tags: [AWS, MongoDB, NodeJS, Nginx]
 ---
 
 In this post, we will explore how to set up a NodeJS app on Amazon’s Lightsail instance. We will also explore setting up a CircleCI job for a NodeJS project, use Nginx as a web server, setup SSL for the server, and allow a local machine to access the remote server.
