More Image for the latest post

--- a/content/posts/migrating-from-wordpress-to-gatsby.mdx
+++ b/content/posts/migrating-from-wordpress-to-gatsby.mdx
@@ -85,7 +85,7 @@ gatsby develop
 
 The result should be something like this:
 
-`<<<IMAGE HERE>>>`
+![gatsby-themed-blog](../assets/gatsby-themed-blog.png)
 
 ### Customizing the theme's look and feel
 
