New Post Update

--- a/content/posts/adonisjs-validators-with-resource-routes.mdx
+++ b/content/posts/adonisjs-validators-with-resource-routes.mdx
@@ -1,7 +1,7 @@
 ---
-title: Adonis - Using Validators with resource routes 
+title: AdonisJS - Using Validators with resource routes 
 date: 2020-01-10
-tags: []
+tags: ["AdonisJS"]
 ---
 
 
