--- a/content/posts/adonisjs-use-events.mdx
+++ b/content/posts/adonisjs-use-events.mdx
@@ -57,7 +57,7 @@ From anywhere in your application call:
 const Event = use("Event");
 
 Event.fire(
-  "new::theme",
+  "NewUser::registered",
   user
 );
 ```
