New Array constructor

--- a/content/posts/asynchronous-javascript.mdx
+++ b/content/posts/asynchronous-javascript.mdx
@@ -131,7 +131,7 @@ const sumTwoNumbers = (a, b, doneCB) => doneCB(a + b);
 Next, let's determine an Array of numbers but try
 
 ```js
-const numbers = Array.fill();
+const numbers = Array(1,2,3,4,5);
 ```
 Now, we can add up the numbers successively using `Array.prototype.forEach`:
 
